added contact me element and code element

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,1 +1,7 @@
-<div>"Contact"</div>
+<div class='contactForm'>
+  <input type="text" placeholder="Name">
+  <input type='text' placeholder="Company Name">
+  <input type="email" placeholder="Email">
+  <textarea name="name" rows="8" cols="40" placeholder="Message Here" ></textarea>
+  <button>Submit</button>
+</div>
