--- a/partials/code.html
+++ b/partials/code.html
@@ -1,1 +1,16 @@
-<div>"PROJECTS"</div>
+<div class='code'>
+  <a href="http://stackoverflow.com/users/5971613/clark-ozanne">stackoverflow  <img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow' height="60" width="60"></a>
+  <a href="https://github.com/superman7117">GitHub  <img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub" height="60" width="60"></a>
+  <pre id="function">
+    function learn(focus){
+      let work = hard;
+      var learn = focus.forEach(function(lessons){
+        return (lessons * work)
+      })
+      work = smart;
+      var understanding = learn.forEach(function(knowledge){
+        return (knowledge * work)
+      })
+    }
+  </pre>
+</div>
