was just told to start from scratch

--- a/partials/code.html
+++ b/partials/code.html
@@ -1,16 +1,19 @@
 <div class='code'>
-  <a href="http://stackoverflow.com/users/5971613/clark-ozanne">stackoverflow  <img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow' height="60" width="60"></a>
-  <a href="https://github.com/superman7117">GitHub  <img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub" height="60" width="60"></a>
+  <a href="http://stackoverflow.com/users/5971613/clark-ozanne"><img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow' height="60" width="60">  stackoverflow</a>
+  <a href="https://github.com/superman7117"><img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub" height="60" width="60">  GitHub</a>
+  <a class="blog" ui-sref="blog"><img src="http://i788.photobucket.com/albums/yy162/donnasimone/roundgreybloglovinlabel_zps08f9ed61.png" alt="GitHub" height="60" width="60">  Blog</a>
+
   <pre id="function">
     function learn(focus){
       let work = hard;
       var learn = focus.forEach(function(lessons){
-        return (lessons * work)
-      })
+        return (lessons * work);
+      });
       work = smart;
       var understanding = learn.forEach(function(knowledge){
-        return (knowledge * work)
-      })
-    }
+        return (knowledge * work);
+      });
+      learn(understanding);
+    };
   </pre>
 </div>
