--- a/partials/code.html
+++ b/partials/code.html
@@ -1,3 +1,15 @@
+<div class='topTitle'>
+  <div id='nav'>
+    <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
+      <div class='under'>^ About Me ^</div>
+    </a>
+    <div><span>and</span></div>
+    <a class="clarkandcode" ui-sref="code"> Code
+      <div class='under wiggle'>^ Projects ^</div>
+    </a>
+  </div>
+</div>
+
 <div class='code'>
   <a href="http://stackoverflow.com/users/5971613/clark-ozanne"><img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow' height="60" width="60">  stackoverflow</a>
   <a href="https://github.com/superman7117"><img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub" height="60" width="60">  GitHub</a>
