--- a/partials/contact.html
+++ b/partials/contact.html
@@ -1,3 +1,15 @@
+<div class='topTitle'>
+  <div id='nav'>
+    <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
+      <div class='under'>^ About Me ^</div>
+    </a>
+    <div><span>and</span></div>
+    <a class="clarkandcode" ui-sref="code"> Code
+      <div class='under wiggle'>^ Projects ^</div>
+    </a>
+  </div>
+</div>
+
 <div class='contactForm'>
   <input type="text" placeholder="Name">
   <input type='text' placeholder="Company Name">
