--- a/partials/index.html
+++ b/partials/index.html
@@ -1,1 +1,12 @@
 
+<div id='title'>
+  <div id='nav'>
+    <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
+      <div class='under'>^ About Me ^</div>
+    </a>
+    <div><span>and</span></div>
+    <a class="clarkandcode" ui-sref="code"> Code
+      <div class='under wiggle'>^ Projects ^</div>
+    </a>
+  </div>
+</div>
