--- a/partials/blog.html
+++ b/partials/blog.html
@@ -1,11 +1,11 @@
 <div class='topTitle'>
   <div id='nav'>
     <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
-      <div class='under'>^ About Me ^</div>
+      <div class='under'>About Me</div>
     </a>
     <div><span>and</span></div>
     <a class="clarkandcode" ui-sref="code"> Code
-      <div class='under wiggle'>^ Projects ^</div>
+      <div class='under wiggle'>Projects</div>
     </a>
   </div>
 </div>
