--- a/style.css
+++ b/style.css
@@ -35,7 +35,10 @@ span {
 	-webkit-animation: wiggle 0.5s infinite;
 }
 .code{
+  margin-top: 10vw;
   display: flex;
+  justify-content: center;
+  align-content: center;
   flex-direction: column;
   font-size: 4vw;
 }
