--- a/partials/clark.html
+++ b/partials/clark.html
@@ -1,13 +1,32 @@
 <div class='topTitle'>
   <div id='nav'>
     <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
-      <div class='under'>^ About Me ^</div>
+      <div class='under'>About Me</div>
     </a>
     <div><span>and</span></div>
     <a class="clarkandcode" ui-sref="code"> Code
-      <div class='under wiggle'>^ Projects ^</div>
+      <div class='under wiggle'>Projects</div>
     </a>
   </div>
 </div>
 
-<div>"RESUME`"</div>
+
+<a href="http://codinghouse.co/#!home"><img src="https://pbs.twimg.com/profile_images/477157394850385920/ZGyWlzlu.png"></a>
+<div>Coding House<div>
+<div>jQuery, Mongo, Mongoose, Express, Nodejs, Angular<div>
+
+<a href="https://interfaceschool.com/"><img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/310/s300/interface-school.png"></a>
+<div>Interface Web School<div>
+<div>HTML5, CSS3, Basic Design, Basic Javascript<div>
+
+<a href="http://www.unomaha.edu/"><img src="http://nebula.wsimg.com/42ff8854fe8002b3dd708ae65f4dab71?AccessKeyId=B4FA8DE082DE786862E8&disposition=0&alloworigin=1"></a>
+<div>University of Nebraska at Omaha<div>
+<div>Bachelors Degree - May 2008 - Political Science major with emphasis in History and Philosophy<div>
+
+<a href="http://www.youngamericans.org/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg/250px-The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg"></a>
+<div>The Young Americans College of the Performing Arts<div>
+<div>Focus on Vocal Performance and Sound Production<div>
+
+<a href="http://www.plhs.paplv.org/"><img src="http://www.gpacac.net/assets/media/Mascots/papiolvmascot.jpg" height="60" width="60"></a>
+<div>Papillion LaVista High School<div>
+<div>Focus on Music and History<div>
