--- a/partials/clark.html
+++ b/partials/clark.html
@@ -10,23 +10,32 @@
   </div>
 </div>
 
+<div class='card'>
+<a href="http://codinghouse.co/#!home"><img src="https://pbs.twimg.com/profile_images/477157394850385920/ZGyWlzlu.png" class='icons'></a>
+<div>Coding House</div>
+<div>jQuery, Mongo, Mongoose, Express, Nodejs, Angular</div>
+</div>
 
-<a href="http://codinghouse.co/#!home"><img src="https://pbs.twimg.com/profile_images/477157394850385920/ZGyWlzlu.png"></a>
-<div>Coding House<div>
-<div>jQuery, Mongo, Mongoose, Express, Nodejs, Angular<div>
+<div class='card'>
+<a href="https://interfaceschool.com/"><img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/310/s300/interface-school.png" class='icons'></a>
+<div>Interface Web School</div>
+<div>HTML5, CSS3, Basic Design, Basic Javascript</div>
+</div>
 
-<a href="https://interfaceschool.com/"><img src="https://course_report_production.s3.amazonaws.com/rich/rich_files/rich_files/310/s300/interface-school.png"></a>
-<div>Interface Web School<div>
-<div>HTML5, CSS3, Basic Design, Basic Javascript<div>
+<div class='card'>
+<a href="http://www.unomaha.edu/"><img src="http://nebula.wsimg.com/42ff8854fe8002b3dd708ae65f4dab71?AccessKeyId=B4FA8DE082DE786862E8&disposition=0&alloworigin=1" class='icons'></a>
+<div>University of Nebraska at Omaha</div>
+<div>Bachelors Degree - May 2008 - Political Science major with emphasis in History and Philosophy</div>
+</div>
 
-<a href="http://www.unomaha.edu/"><img src="http://nebula.wsimg.com/42ff8854fe8002b3dd708ae65f4dab71?AccessKeyId=B4FA8DE082DE786862E8&disposition=0&alloworigin=1"></a>
-<div>University of Nebraska at Omaha<div>
-<div>Bachelors Degree - May 2008 - Political Science major with emphasis in History and Philosophy<div>
+<div class='card'>
+<a href="http://www.youngamericans.org/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg/250px-The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg" class='icons'></a>
+<div>The Young Americans College of the Performing Arts</div>
+<div>Focus on Vocal Performance and Sound Production</div>
+</div>
 
-<a href="http://www.youngamericans.org/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg/250px-The_Young_Americans_College_of_the_Performing_Arts_Logo.jpg"></a>
-<div>The Young Americans College of the Performing Arts<div>
-<div>Focus on Vocal Performance and Sound Production<div>
-
-<a href="http://www.plhs.paplv.org/"><img src="http://www.gpacac.net/assets/media/Mascots/papiolvmascot.jpg" height="60" width="60"></a>
-<div>Papillion LaVista High School<div>
-<div>Focus on Music and History<div>
+<div class='card'>
+<a href="http://www.plhs.paplv.org/"><img src="http://www.gpacac.net/assets/media/Mascots/papiolvmascot.jpg" class='icons'></a>
+<div>Papillion LaVista High School</div>
+<div>Focus on Music and History</div>
+</div>
