--- a/partials/code.html
+++ b/partials/code.html
@@ -11,24 +11,24 @@
 </div>
 
 <div class='code'>
-  <a href="http://whosrunninganyway.com"><img src="http://whosrunninganyway.com/images/WhosRunningAnyway.png" alt='WhosRunningAnyway' height="60" width="60">  WhosRunningAnyway</a>
+  <a href="http://whosrunninganyway.com"><img src="http://whosrunninganyway.com/images/WhosRunningAnyway.png" alt='WhosRunningAnyway'>  WhosRunningAnyway</a>
   <div class='more'>More
     <div class='moreInfo'>Stuff about stuff<div>
     <a href="http://whosrunninganyway.com/District-of-Columbia/Example-Candidates/election/928">See Example Candidates</a>
     <iframe width="665" height="381" src="https://www.youtube.com/embed/c7FfD3QptIc" frameborder="0" allowfullscreen></iframe>
   <div>
-  <a href="https://survive-alive.com/"><img src="http://survive-alive.com/wp-content/uploads/2014/06/Slide12.jpg" alt='Survive-Alive' height="60" width="60">  Survive-Alive</a>
+  <a href="https://survive-alive.com/"><img src="http://survive-alive.com/wp-content/uploads/2014/06/Slide12.jpg" alt='Survive-Alive'>  Survive-Alive</a>
   <div class='more'>More
     <div class='moreInfo'>Stuff about stuff<div>
     <iframe width="680" height="466" src="https://www.youtube.com/embed/lIqLFcqH3M4" frameborder="0" allowfullscreen></iframe>
   <div>
-  <a href="https://github.com/superman7117"><img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub" height="60" width="60">  GitHub</a>
+  <a href="https://github.com/superman7117"><img src="https://www.thoughtworks.com/imgs/icons/social/github.png" alt="GitHub">  GitHub</a>
   <div class='more'>More
     <div class='moreInfo'>Stuff about stuff<div>
-      <a href="http://superman7117.github.io/Blackjack/"><img src="https://lh4.googleusercontent.com/-ie9WtRMI8FI/U_8gDQXWXfI/AAAAAAAAS2M/h_ldXajpCYA/freedom.gif" alt='Blackjack' height="60" width="60">  Blackjack(sample from GitHub)</a>
-      <a href="http://superman7117.github.io/weather_app/"><img src="http://icons.wxug.com/i/c/k/nt_partlycloudy.gif" alt='Weather' height="60" width="60">  Weather(sample from GitHub)</a>
+      <a href="http://superman7117.github.io/Blackjack/"><img src="https://lh4.googleusercontent.com/-ie9WtRMI8FI/U_8gDQXWXfI/AAAAAAAAS2M/h_ldXajpCYA/freedom.gif" alt='Blackjack'>  Blackjack(sample from GitHub)</a>
+      <a href="http://superman7117.github.io/weather_app/"><img src="http://icons.wxug.com/i/c/k/nt_partlycloudy.gif" alt='Weather'>  Weather(sample from GitHub)</a>
   <div>
-  <a href="http://stackoverflow.com/users/5971613/clark-ozanne"><img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow' height="60" width="60">  stackoverflow</a>
-  <a class="blog" ui-sref="blog"><img src="http://i788.photobucket.com/albums/yy162/donnasimone/roundgreybloglovinlabel_zps08f9ed61.png" alt="GitHub" height="60" width="60">  Blog</a>
+  <a href="http://stackoverflow.com/users/5971613/clark-ozanne"><img src="http://cdn.sstatic.net/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt='stackoverflow'>  stackoverflow</a>
+  <a class="blog" ui-sref="blog"><img src="http://i788.photobucket.com/albums/yy162/donnasimone/roundgreybloglovinlabel_zps08f9ed61.png" alt="GitHub">  Blog</a>
 
 </div>
